--- a/CS2207.ipynb
+++ b/CS2207.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kimanh1/CS_2207/blob/main/CS2207.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -22,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting streamlit\n",
             "  Downloading streamlit-1.38.0-py2.py3-none-any.whl.metadata (8.5 kB)\n",
@@ -111,8 +111,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "35.229.160.149\n"
           ]
@@ -153,8 +153,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Writing app.py\n"
           ]
@@ -164,7 +164,17 @@
         "%%writefile app.py\n",
         "# Sidebar for user input\n",
         "import streamlit as st\n",
+        "col1, col2 = st.columns(2)\n",
+        "with col1:\n",
+        "    st.header(\"Left Side\")\n",
+        "    st.write(\"This is the content for the left part of the interface.\")\n",
+        "    st.button(\"Left Button\")\n",
         "\n",
+        "# Content for the second column\n",
+        "with col2:\n",
+        "    st.header(\"Right Side\")\n",
+        "    st.write(\"This is the content for the right part of the interface.\")\n",
+        "    st.button(\"Right Button\")\n",
         "st.sidebar.write(\"### Predict House Price\")\n",
         "sqft = st.sidebar.number_input('Square Footage', min_value=500, max_value=5000, value=1500)\n",
         "bedrooms = st.sidebar.slider('Number of Bedrooms', min_value=1, max_value=10, value=3)\n",
@@ -239,10 +249,10 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1KEjxFuqEVbehMk1ROgzDvZAlD05YQ2lL",
       "authorship_tag": "ABX9TyM19YTwcSL3bTdWyn+u76VG",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "mount_file_id": "1KEjxFuqEVbehMk1ROgzDvZAlD05YQ2lL",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
